--- a/Tigran_Nalbandyan/ReactJS/project/package.json
+++ b/Tigran_Nalbandyan/ReactJS/project/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "mdbreact": "^4.14.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
