--- a/Tigran_Nalbandyan/ReactJS/my_project/package.json
+++ b/Tigran_Nalbandyan/ReactJS/my_project/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.6",
     "@material-ui/core": "^4.0.1",
     "@material-ui/icons": "^4.0.1",
+    "@material-ui/pickers": "^3.0.0",
+    "date-fns": "^2.0.0-alpha.27",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1"
   },
   "scripts": {
