--- a/Tigran_Nalbandyan/ReactJS/my_project/package.json
+++ b/Tigran_Nalbandyan/ReactJS/my_project/package.json
@@ -8,6 +8,10 @@
     "@material-ui/icons": "^4.0.1",
     "@material-ui/pickers": "^3.0.0",
     "date-fns": "^2.0.0-alpha.27",
+    "mdbreact": "^4.14.0",
+    "bootstrap": "^4.3.1",
+    "reactstrap": "^8.0.0",
+    "react-icons": "^3.7.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
