--- a/Garik_Saghumyan/Web/JS/REACT/react_project_homework/package.json
+++ b/Garik_Saghumyan/Web/JS/REACT/react_project_homework/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-modal": "^3.8.1",
+    "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "reactstrap": "^8.0.0"
