--- a/Tigran_Nalbandyan/ReactJS/my_project/package.json
+++ b/Tigran_Nalbandyan/ReactJS/my_project/package.json
@@ -7,17 +7,14 @@
     "@material-ui/core": "^4.0.1",
     "@material-ui/icons": "^4.0.1",
     "@material-ui/pickers": "^3.0.0",
-    "bootstrap": "^4.3.1",
     "date-fns": "^2.0.0-alpha.27",
     "material-table": "^1.36.0",
-    "mdbreact": "^4.14.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-icons": "^3.7.0",
+    "react-leaf-carousel": "^1.2.2",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
-    "reactstrap": "^8.0.0",
     "redux": "^4.0.1"
   },
   "scripts": {
