--- a/Tigran_Nalbandyan/ReactJS/my_project/package.json
+++ b/Tigran_Nalbandyan/ReactJS/my_project/package.json
@@ -11,6 +11,7 @@
     "material-table": "^1.36.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-google-charts": "^3.0.13",
     "react-leaf-carousel": "^1.2.2",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
