--- a/Anahit_Karyan/React/src/Homeworks/5-29.05(ITC-10 project Redux)/package.json
+++ b/Anahit_Karyan/React/src/Homeworks/5-29.05(ITC-10 project Redux)/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@trendmicro/react-sidenav": "^0.4.5",
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-alert": "^5.5.0",
