--- a/Arthur_Aghajanyan/ApplicationReactHomework/CorrectedHomework/package.json
+++ b/Arthur_Aghajanyan/ApplicationReactHomework/CorrectedHomework/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "@trendmicro/react-sidenav": "^0.4.5",
+    "apexcharts": "^3.7.0",
     "react": "^16.8.6",
+    "react-apexcharts": "^1.3.3",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
