--- a/Garik_Saghumyan/Web/JS/REACT/react_project_homework/package.json
+++ b/Garik_Saghumyan/Web/JS/REACT/react_project_homework/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@trendmicro/react-sidenav": "^0.4.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-modal": "^3.8.1",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
-    "reactstrap": "^8.0.0"
+    "reactstrap": "^8.0.0",
+    "recharts": "^1.6.2",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
