--- a/Arthur_Aghajanyan/NodeJs/CreateSchoolServer/package.json
+++ b/Arthur_Aghajanyan/NodeJs/CreateSchoolServer/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-validator": "^6.1.1",
+    "require-one-of": "^1.0.11"
   }
 }
