--- a/Arthur_Aghajanyan/NodeJs/CreateSchoolServer/package.json
+++ b/Arthur_Aghajanyan/NodeJs/CreateSchoolServer/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +13,8 @@
     "express": "^4.17.1",
     "express-validator": "^6.1.1",
     "require-one-of": "^1.0.11"
+  },
+  "devDependencies": {
+    "mocha": "^6.1.4"
   }
 }
