--- a/Garik_Saghumyan/Node_JS/school/package.json
+++ b/Garik_Saghumyan/Node_JS/school/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha || true"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "express": "^4.17.1",
-    "express-validator": "^6.1.1"
+    "express-validator": "^6.1.1",
+    "mocha": "^6.1.4"
   }
 }
