--- a/Tigran_Nalbandyan/Node.js/School/package.json
+++ b/Tigran_Nalbandyan/Node.js/School/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "SET NODE_ENV=dev && node server.js",
+    "start": "SET NODE_ENV=dev && node app.js",
     "test": "mocha --timeout 10000"
   },
   "author": "",
