--- a/Garik_Saghumyan/Node_JS/mongoose_API/package.json
+++ b/Garik_Saghumyan/Node_JS/mongoose_API/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "./node_modules/nodemon/bin/nodemon.js app.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,5 +13,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.5"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
