--- a/Anahit_Karyan/NodeJS(22.07)/package.json
+++ b/Anahit_Karyan/NodeJS(22.07)/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "school-server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "nodemon": "./node_modules/nodemon/bin/nodemon.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.1.1",
     "mongoose": "^5.6.5",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "nodemon": "^1.19.1"
   }
 }
