--- a/Arthur_Aghajanyan/NodeJs/Mongoose/package.json
+++ b/Arthur_Aghajanyan/NodeJs/Mongoose/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev" : "./node_modules/nodemon/bin/nodemon.js ./app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongoose": "^5.6.5"
+    "mongoose": "^5.6.5",
+    "nodemon": "^1.19.1"
   }
 }
