mongoose with middlewares

--- a/Narek_Jilavyan/NodeJs/Mongoose/package.json
+++ b/Narek_Jilavyan/NodeJs/Mongoose/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "Mongoose_project",
+  "name": "mongoose_project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "nodemon": "./node_modules/nodemon/bin/nodemon.js"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Narek Jilavyan",
   "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^1.19.1"
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongoose": "^5.6.5",
-    "validator": "^11.1.0"
+    "mongoose": "^5.6.6"
   }
 }
