--- a/Tigran_Nalbandyan/Node.js/Shop/package.json
+++ b/Tigran_Nalbandyan/Node.js/Shop/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "./node_modules/nodemon/bin/nodemon.js ./app.js",
+    "nodemon": "./node_modules/nodemon/bin/nodemon.js ./app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
