--- a/Garik_Saghumyan/Node_JS/mongoose_API/package.json
+++ b/Garik_Saghumyan/Node_JS/mongoose_API/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "./node_modules/nodemon/bin/nodemon.js app.js"
+    "nodemon": "./node_modules/nodemon/bin/nodemon.js app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "forever": "^1.0.0",
     "mongoose": "^5.6.5"
   },
   "devDependencies": {
