--- a/Garik_Saghumyan/Node_JS/mongoose_API/package.json
+++ b/Garik_Saghumyan/Node_JS/mongoose_API/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "forever": "^1.0.0",
     "mongoose": "^5.6.5"
