--- a/Garik_Saghumyan/Node_JS/mongoose_API/package.json
+++ b/Garik_Saghumyan/Node_JS/mongoose_API/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "nodemon": "./node_modules/nodemon/bin/nodemon.js app.js"
+    "nodemon": "./node_modules/nodemon/bin/nodemon.js app.js",
+    "dev": "node ./config/config.dev.js",
+    "qa": "node ./config/config.qa.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +16,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "forever": "^1.0.0",
+    "log4js": "^4.5.1",
     "mongoose": "^5.6.5"
   },
   "devDependencies": {
