--- a/Arthur_Aghajanyan/NodeJs/Mongoose/package.json
+++ b/Arthur_Aghajanyan/NodeJs/Mongoose/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "bunyan": "^1.8.12",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "forever": "^1.0.0",
