--- a/Mane_Antonyan/mongo/package.json
+++ b/Mane_Antonyan/mongo/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "forever": "^1.0.0",
+    "log4js": "^4.5.1",
     "mongoose": "^5.6.5"
   }
 }
