--- a/Anahit_Karyan/NodeJS(22.07)/package.json
+++ b/Anahit_Karyan/NodeJS(22.07)/package.json
@@ -11,10 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "debug": "^4.1.1",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.1.1",
-    "mongoose": "^5.6.5",
+    "forever": "^1.0.0",
+    "mongoose": "^5.6.6",
     "mysql": "^2.17.1",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "winston": "^3.2.1"
   }
 }
