--- a/Tigran_Nalbandyan/Java/authTest/pom.xml
+++ b/Tigran_Nalbandyan/Java/authTest/pom.xml
@@ -28,6 +28,18 @@
             <version>6.14.3</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>3.6.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>3.6.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
