--- a/Hunan_Khachatryan/selenium-chat-test/pom.xml
+++ b/Hunan_Khachatryan/selenium-chat-test/pom.xml
@@ -25,5 +25,19 @@
       <artifactId>selenium-java</artifactId>
       <version>3.14.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.6</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.github.bonigarcia</groupId>
+      <artifactId>webdrivermanager</artifactId>
+      <version>3.6.2</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 </project>
