--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,6 @@
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-package-lock.json
-
 *.o
 *.swp
 *.swo
 ./temp
-./
+node_modules/
+package-lock.json
